objects/ASI_CRM_ConfirmedSalesVolume__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_AccountsAdditionalField__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet (Additional)</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Confirmed Sales Volume</relationshipLabel>
        <relationshipName>Confirmed_Sales_Volume</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ExId__c</fullName>
        <label>Confirmed Sales Volume ExId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Confirmed Sales Volume</relationshipLabel>
        <relationshipName>Confirmed_Sales_Volume</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PRTShare__c</fullName>
        <formula>TEXT(ROUND((ASI_CRM_PRTVolume__c /  ASI_CRM_Total__c * 100),2)) + &apos; %&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PRT Share</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PRTVolume__c</fullName>
        <label>PRT Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_ProductCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>ASI_HK_CRM_Product_Category__c</referenceTo>
        <relationshipLabel>Confirmed Sales Volume</relationshipLabel>
        <relationshipName>Confirmed_Sales_Volume</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Confirmed Sales Volume</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YY}{MM}{0000}</displayFormat>
        <label>Confirmed Sales Volume No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Confirmed Sales Volume</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_TW_ConfirmedSalesVolume_RcrdTyp</fullName>
        <active>true</active>
        <label>ASI_CRM_TW Confirmed Sales Volume</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>